<resources>
    <string name="app_name">Emotions</string>
    <string name="feeling_hint">Я чувствую</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen_main">Добро пожаловать</string>
    <string name="login_by_google">Войти через Google</string>
    <string name="journal_main_question">Что вы сейчас чувствуете?</string>
    <string name="add_button_text">Добавить запись</string>
    <string name="null_string">null</string>
    <string name="record">Запись</string>
    <string name="first_question">Чем вы занимались?</string>
    <string name="second_question">С кем вы были?</string>
    <string name="third_question">Где вы были?</string>
    <string name="save_button">Сохранить</string>
    <string name="adding_emotion_hint">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>
    <string name="reminder">Напоминание</string>
    <string name="divider">:</string>
    <string name="twenty">20</string>
    <string name="hours">Часы</string>
    <string name="minutes">Минуты</string>
    <string name="save">Сохранить</string>
    <string name="category_emotions">Эмоции по категориям</string>
    <string name="frequent_emotions">Самые частые эмоции</string>
    <string name="day_emotions">Ваше настроение в течение дня</string>
    <string name="early_morning">Раннее утро</string>
    <string name="morning">Утро\n</string>
    <string name="afternoon">День\n</string>
    <string name="evening">Вечер\n</string>
    <string name="late_evening">Поздний вечер</string>
    <string name="send_notifications">Присылать уведомления</string>
    <string name="add_notification">Добавить напоминание</string>
    <string name="fingerprintLogin">Вход по отпечатку пальца</string>
    <string name="settings">Настройки</string>
    <string name="weeekday_emotions">Эмоции по дням недели</string>
</resources>