<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.Emotions.FullscreenContainer"
    tools:context=".ui.fragment.JournalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recordsAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/graphite_rounded_shape"
            android:fontFamily="@font/vela_sans_gx"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="4 записи"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/recordsPerDay"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/recordsPerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/graphite_rounded_shape"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toStartOf="@id/streak"
            app:layout_constraintStart_toEndOf="@id/recordsAmount"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recordsPerDayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/vela_sans_gx"
                android:text="в день:"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/recordsPerDayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vela_sans_gx"
                android:text="2 записи"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/graphite_rounded_shape"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recordsPerDay"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/streakLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/vela_sans_gx"
                android:text="в день:"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/streakValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vela_sans_gx"
                android:text="2 записи"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mainQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/gwen_trial_book"
            android:text="@string/journal_main_question"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordsPerDay" />

        <ImageView
            android:id="@+id/circle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ellipse"
            android:contentDescription="@string/null_string"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainQuestion" />

        <ImageView
            android:id="@+id/gradientCircle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/gradient_circle"
            android:contentDescription="@string/null_string"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <View
            android:id="@+id/coloredRightHalfCircle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/half_circle_yellow"
            android:contentDescription="@string/null_string"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <View
            android:id="@+id/coloredLeftHalfCircle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/half_circle_yellow"
            android:rotation="180"
            android:contentDescription="@string/null_string"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <ImageButton
            android:id="@+id/addRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/white_rounded_shape"
            android:contentDescription="@string/null_string"
            android:padding="19dp"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toTopOf="@+id/addRecordText"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/addRecordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vela_sans_medium"
            android:text="@string/add_button_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toBottomOf="@+id/addRecordButton" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/emotionsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>